chore: add more package information
This commit added license and repository information in `package.json`.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "displayName": "Monomixed",
   "description": "Monokai mixed with colors from other themes",
   "version": "0.0.1",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hecticme/vscode-theme-monomixed"
+  },
   "engines": {
     "vscode": "^1.88.0"
   },
