chore: add publisher name

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "publisher": "hecticme",
   "name": "monomixed",
   "displayName": "Monomixed",
   "description": "Monokai mixed with colors from other themes",
