chore: add package keywords

--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "categories": [
     "Themes"
   ],
+  "keywords": [
+    "monokai",
+    "dark"
+  ],
   "contributes": {
     "themes": [
       {
