chore: change display name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "publisher": "hecticme",
   "name": "monomixed",
-  "displayName": "Monomixed",
+  "displayName": "Monokai Peculiar",
   "description": "VSCode theme with Monokai as the base",
   "icon": "icon.png",
   "version": "0.1.1",
