--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "publisher": "hecticme",
-  "name": "monomixed",
+  "name": "monokai-peculiar",
   "displayName": "Monokai Peculiar",
   "description": "VSCode theme with Monokai as the base",
   "icon": "icon.png",
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hecticme/vscode-theme-monomixed"
+    "url": "https://github.com/hecticme/vscode-theme-monokai-peculiar"
   },
   "engines": {
     "vscode": "^1.88.0"
@@ -23,9 +23,9 @@
   "contributes": {
     "themes": [
       {
-        "label": "Monomixed",
+        "label": "Monokai Peculiar",
         "uiTheme": "vs-dark",
-        "path": "./themes/monomixed-color-theme.json"
+        "path": "./themes/monokai-peculiar-color-theme.json"
       }
     ]
   }
