--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
       {
         "label": "Monokai Peculiar",
         "uiTheme": "vs-dark",
-        "path": "./themes/monokai-peculiar-color-theme.json"
+        "path": "./src/themes/default.json"
       }
     ]
-  }
+  },
+  "type": "module"
 }
