--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 node_modules
 *.vsix
+
+# Windows specific files.
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Mac specific files.
+.DS_Store
+
+# Theme JSON file.
+themes
+
+# Miscellaneous.
+.idea
+
+# IDE.
+.vscode
