fix: correct file path for default theme JSON file

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       {
         "label": "Monokai Peculiar",
         "uiTheme": "vs-dark",
-        "path": "./src/themes/default.json"
+        "path": "./themes/default.json"
       }
     ]
   },
