--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^2.1.0",
+    "@vscode/vsce": "^2.26.1",
     "eslint": "^9.3.0"
   }
 }
